# AO-DuckDB

./: .gitignore  README.md  build.sh
inject/: CMakeLists.txt  Makefile
l_duckdb/: CMakeLists.txt  l_duckdb.cpp
tests/: duckdb.test.js  package.json
